--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jergason/Recorderjs.git"
+    "url": "https://github.com/UAlbertaALTLab/Recorderjs.git"
   },
   "keywords": [
     "web-audio-api",
     "record",
     "browserify"
   ],
-  "author": "Jamison Dance <jergason@gmail.com> (http://jamisondance.com)",
+  "author": "Fork from Jamison Dance <jergason@gmail.com> (http://jamisondance.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jergason/Recorderjs/issues"
   },
   "homepage": "https://github.com/jergason/Recorderjs",
   "peerDependencies": {
-    "browserify": "^5.11.1",
-    "workerify": "^0.3.0"
+    "workerify": "^1.0.0"
   },
   "dependencies": {}
 }
